--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
