--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "path": "^0.12.7",
     "validator": "^13.1.17"
