--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "author": "mohsin baig",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
+    "kill-port": "^1.6.1",
     "nodemon": "^2.0.5"
   }
 }
